--- a/_layouts/songwriting.html
+++ b/_layouts/songwriting.html
@@ -16,6 +16,8 @@
 			background-color: #342E37;
 			font-family: avenir;
 			color: #FAFFFD;
+			-webkit-font-smoothing: antialiased;
+			
 		}
 		
 		h1, h2, h3, h4, h5, h6 {
@@ -65,6 +67,7 @@
 			margin-left: 20px;
 			margin-bottom: 3px;
 			border: none;
+			font-style: oblique;
 		}
 		
 		#introtext {
@@ -123,8 +126,9 @@
 		}
 		
 		.videocallevery {
-			width: 90px;
-			margin: 0px 0px 0px 5px;
+			height: 36px;
+			width: inherit;
+			margin: 0px 0px 0px 0px;
 			margin-bottom: 9px;
 		}
 		
