--- a/_layouts/songwriting.html
+++ b/_layouts/songwriting.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Online Songwriting Lessons</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=600">
+	<meta name="viewport" content="width=600, initial-scale=1">
 	<style>
 		
 		html {
@@ -11,13 +11,26 @@
 		}
 		
 		body {
-			width: 600px;
+			width: px;
 			margin: 0 auto;
 			background-color: #342E37;
 			font-family: avenir;
 			color: #FAFFFD;
-			-webkit-font-smoothing: antialiased;
+			-webkit-text-size-adjust: none;
+			text-size-adjust: none;
 			
+		}
+		
+		.yt {
+			width: 100%;
+			height: 56.1vw;
+			max-height: 550px;
+			margin: 0 auto;
+		}
+		
+		#trailer {
+			width: 100%;
+			margin-top: 0px;
 		}
 		
 		h1, h2, h3, h4, h5, h6 {
@@ -38,7 +51,7 @@
 			font-weight: 400;
 			font-size: 70px;
 			line-height: 1.28em;
-			margin: 60px;
+			margin: 60px 0px;
 		}
 		
 		header div {
@@ -68,6 +81,11 @@
 			margin-bottom: 1px;
 			border: none;
 			font-style: oblique;
+		}
+		
+		.signup:hover {
+			border: none;
+			text-decoration: none;
 		}
 		
 		#introtext {
