--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -254,7 +254,7 @@
 			</div>
 		</nav>
 		<div>
-			<img src="/images/petter.jpg">
+			<img src="/images/petterbig.jpg">
 		</div>
 	</header>
 	<div id="content">
