--- a/_layouts/songwriting.html
+++ b/_layouts/songwriting.html
@@ -74,12 +74,45 @@
 			align-items: center;
 		}
 		
+		header a {
+			border: none;
+		}
+		
+		header a:hover {
+			border: none;
+		}
+		
+		header img {
+			margin: 0px;
+		}
+		
 		header h1 {
-			font-family: avenirmedium;
+			font-family: avenirblackoblique;
 			text-align: center;
-			font-size: 70px;
+			font-size: 80px;
 			line-height: 1.28em;
 			margin: 60px 0px 0px;
+			display: none;
+		}
+		
+		#titles {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-end;
+		}
+		
+		.logo {
+			width: 550px;
+		}
+		
+		.originality {
+			width: 350px;
+			margin-top: 7px;
+		}
+		
+		.signuphover:hover {
+			opacity: 0.8;
+			transition: 0.5s;
 		}
 		
 		header div {
@@ -97,7 +130,7 @@
 		}
 		
 		.signup {
-			padding: 8px 17px;
+			padding: 10px 17px 8px;
 			background-color: #A2D729;
 			color: #342E37;
 			font-weight: 400;
@@ -243,49 +276,69 @@
 		}
 		
 		a {
-			text-decoration: none;
-			border-bottom: 1px solid #FAFFFD;
+			text-decoration: underline;
 			color: #FAFFFD;
 		}
 		
 		a:hover {
-			border-bottom: 1px solid grey;
+			border-bottom: 1px solid #FAFFFD;
+			text-decoration: none;
 		}
 		
 		#questions {
 			max-width: 460px;
 			margin: 35px auto 0px;
 			padding: 0px 20px;
+			line-height: 1.6em;
 		}
 		
 		#questions div {
+			font-family: avenirheavy;
 			font-weight: 900;
 			margin-top: 25px;
 		}
 		
+		#questions ul {
+			margin: 0px;
+		}
 		
 		#contact {
 			display: flex;
 			flex-direction: column;
 			align-items: center; 
 			padding-bottom: 100px;
-			}
+		}
 		
 		#contact a {
-			padding: 14px 20px 12px;
+			padding: 16px 20px 12px;
 			background-color: #A2D729;
 			color: #342E37;
-			font-weight: 600;
 			letter-spacing: 0.5px;
 			font-size: 19px;
+			font-weight: 500;
 			text-decoration: none;
 			border-radius: 10px;
 			margin: 20px 0px 0px;
 			border: none;
-			display: inline-block;
+			font-family: avenirheavy;
+		}
+		
+		.narrow {
+			display: none;
 		}
 		
 		@media screen and (max-width: 600px) {
+			
+			#titles {
+			}
+			
+			.logo {
+				width: 90vw;
+			}
+			
+			.originality {
+				width: 90vw;
+			}
 			
 			h2 {
 				font-size: 6vw;
@@ -327,6 +380,10 @@
 				display: none;
 			}
 			
+			.orange {
+				line-height: 1.15em;
+			}
+			
 			.trackdesc {
 				font-size: 4vw;
 			}
@@ -351,9 +408,8 @@
 			
 			#aboutme, #questions {
 				font-size: 4vw;
-				line-height: normal;
 			}
-			
+	
 		}
 		
 	</style>
