ananlytics favicon etc

--- a/_layouts/songwriting.html
+++ b/_layouts/songwriting.html
@@ -2,10 +2,18 @@
 <html>
 <head>
 	<title>Online Songwriting Lessons</title>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179534280-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-179534280-1');
+	</script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=width-device-width, initial-scale=1.0">
 	<style>
-		
 		@font-face {
 		  font-family: avenirbook;
 		  src: url(/fonts/avenirltstd-book.otf);
@@ -437,6 +445,9 @@
 		}
 		
 	</style>
+	<link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+	<meta property="og:image" content="/images/piano.jpg"/>
+	<meta property="og:description" content="Online Songwriting Lessons will bring your songs over the finish line with tailored songwriting exercises and supportive video chats."/>
 </head>
 <body>
 	<div id="trailer">
