--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,15 @@
 	<title>Petter Rylén</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179534280-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-179534280-1');
+	</script>
 	<style>
 		body {
 			margin: 0;
@@ -155,15 +164,16 @@
 		
 		#concerts {
 			display: flex;
-			justify-content: center;
-			flex-wrap:wrap;
+			flex-direction: column;
+			align-items: center;
+			flex-wrap: wrap;
 			max-width: 1000px;
 		}
 		
 		#concerts > div {
 			display: inline-grid;
 			grid-gap: 30px;
-			grid-template-columns: 1fr 1fr 2fr 0fr;
+			grid-template-columns: 1fr 1.7fr 1fr 0fr;
 			grid-template-rows: 1fr;
 			font-size: 25px;
 		}
@@ -228,13 +238,14 @@
 			
 			#concerts > div {
 				display: inline-grid;
-				grid-gap:0px;
+				grid-gap: 0px;
 				grid-template-columns: 1fr;
 				grid-template-rows: 1fr 1fr 1fr 1fr		1fr 1fr 1fr 1fr		1fr 1fr 1fr 1fr         1fr 1fr 1fr;
 				
 			}
 		}	
 	</style>
+	<meta property="og:image" content="/images/petterbig.jpg"/>
 </head>
 <body>
 	<header>
