new vid and prices change and faqs

--- a/_layouts/songwriting.html
+++ b/_layouts/songwriting.html
@@ -115,7 +115,7 @@
 		}
 		
 		.originality {
-			width: 350px;
+			width: 140px;
 			margin-top: 7px;
 		}
 		
@@ -193,6 +193,7 @@
 		}
 		
 		.trackdesc {
+			display: none;
 			text-align: center;
 			margin: 30px;
 			letter-spacing: 0.4px;
@@ -200,6 +201,7 @@
 		}
 		
 		.trackfacts {
+			margin-top: 25px;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
@@ -357,8 +359,8 @@
 			}
 			
 			.originality {
-				width: 90vw;
-				padding-top: 60px;
+				width: 45vw;
+				padding-top: 2px;
 				padding-left: 4vw;
 			}
 			
@@ -407,6 +409,7 @@
 			}
 			
 			.trackdesc {
+				display: none;
 				font-size: 4vw;
 				margin-top: 25px;
 			}
