--- a/_layouts/songwriting.html
+++ b/_layouts/songwriting.html
@@ -376,6 +376,14 @@
 			display: block;
 		}
 		
+		.contacttext {
+			width: 350px;
+			text-align: center;
+			margin: 23px auto 20px;
+			letter-spacing: 0.4px;
+			line-height: 1.5em;
+		}
+		
 		@media screen and (max-width: 600px) {
 			
 			#titles {
@@ -469,6 +477,10 @@
 			
 			.wideimg {
 				display: none;
+			}
+			
+			.contacttext {
+				width: 80vw;
 			}
 	
 		}
