--- a/_layouts/songwriting.html
+++ b/_layouts/songwriting.html
@@ -277,6 +277,15 @@
 			margin-bottom: 60px;
 		}
 		
+		.testi {
+		max-width: 460px;
+		margin: 0 auto;
+		padding: 0px 20px;
+		line-height: 1.6em;
+		letter-spacing: 0.4px;
+		margin-top: 35px;
+		}
+		
 		#aboutme {
 			max-width: 460px;
 			margin: 0 auto;
