--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,6 +109,14 @@
 			max-width: 700px;
 		}
 		
+		#bio a  {
+			color: #cc8033;
+		}
+		
+		#bio a:hover  {
+			color: #3d260f;
+		}
+		
 		#bio {
 			margin-bottom:-1em;
 			max-width:670px;
@@ -154,7 +162,12 @@
 			font-family: "Avenir", "Helvetica Neue", sans-serif;
 			margin: 0;
 			padding: 0;
-		    
+			text-align: left;
+		}
+		
+		.black {
+			color: black;
+			opacity: 0.65;
 		}
 
 		.imgwrap:hover .imgdescription {
